# code_wars_solver

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.tests.yaml  docker-compose.tests.yml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: lock_dependencies.yml  on_pull_request_closed.yml  on_pull_request_commit.yml
.run/: All tests.run.xml  FastAPI.run.xml  docker-compose test.run.xml  docker-compose.run.xml  docker-compose.test.run.xml  uvicorn.run.xml
app/: config.py  kata_trainer.py  main.py  methods.py  models.py  utils.py
app/chains/: __init__.py  kata_solver.py  kata_solver_first_try.py  kata_solver_with_error_context.py
app/kata/: __init__.py  controllers.py  methods.py  models.py
app/kata/chains/: kata_solver_first_try.py  kata_solver_with_error_context.py
app/user/: __init__.py  controllers.py
tests/kata/: methods_test.py
