[tool.poetry]
name = "code_wars_solver"
version = "0.1.3"
description = "Use chatGPT to solve code katas from code wars"
authors = ["Maxime Houé <maxhoue@gmail.com>"]
readme = "README.md"
repository = "https://github.com/maxime-houe/code_wars_solver"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
langchain = "^0.1.5"
langchain-openai = "^0.0.5"
openai = "^1.10.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.0.3"
selenium = "^4.17.2"
tiktoken = "^0.5.2"
uvicorn = "^0.27.0"


[tool.poetry.group.tests.dependencies]
hypothesis = "^6.98.1"
pytest = "^8.0.0"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.1.1"
python-semantic-release = "^8.7.0"

[tool.pytest.ini_options]
python_files = ["*_test.py"]
markers = [
    "integration",
    "unit",
]

[tool.semantic_release]
version_variables = [
    "app/config.py:__version__",
]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
