[tool.poetry]
name = "code_wars_solver"
version = "0.1.3"
description = "Use chatGPT to solve code katas from code wars"
authors = ["Maxime Houé <maxhoue@gmail.com>"]
readme = "README.md"
repository = "https://github.com/maxime-houe/code_wars_solver"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
langchain = "^0.1.11"
langchain-openai = "^0.0.5"
openai = "^1.12.0"
pydantic = "^2.6.4"
pydantic-settings = "^2.0.3"
selenium = "^4.24.0"
tiktoken = "^0.5.2"
uvicorn = "^0.27.1"


[tool.poetry.group.tests.dependencies]
hypothesis = "^6.111.2"
pytest = "^8.3.2"
pytest-cov = "^4.0.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
python-semantic-release = "^9.8.8"

[tool.pytest.ini_options]
python_files = ["*_test.py"]
markers = [
    "integration",
    "unit",
]

[tool.semantic_release]
version_variables = [
    "app/config.py:__version__",
]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
