[tool.poetry]
name = "code_wars_solver"
version = "0.1.3"
description = "Use chatGPT to solve code katas from code wars"
authors = ["Maxime Houé <maxhoue@gmail.com>"]
readme = "README.md"
repository = "https://github.com/maxime-houe/code_wars_solver"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
langchain = "^0.1.20"
langchain-openai = "^0.1.6"
openai = "^1.55.1"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.1"
selenium = "^4.27.1"
tiktoken = "^0.5.2"
uvicorn = "^0.32.1"


[tool.poetry.group.tests.dependencies]
hypothesis = "^6.119.3"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
python-semantic-release = "^9.15.2"

[tool.pytest.ini_options]
python_files = ["*_test.py"]
markers = [
    "integration",
    "unit",
]

[tool.semantic_release]
version_variables = [
    "app/config.py:__version__",
]
version_toml = [
    "pyproject.toml:tool.poetry.version",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
